Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.3, 5.15
-
2d8033a4ffb9ca60adee29d375491d7ed2a82747
-
Bug Fixing Candidates
Description
To reproduce with attached project:
- press Right arrow until you get to the end of the list
- press Enter
-> currentIndex == count - press Enter again
-> currentIndex > count and highlight is gone
It looks like removing action doesn't update the currentIndex properly. On a quick look, it looks like currentChanges in QQuickItemView is not reset() before new changes are added so it skips updating newCurrentIndex variable and thus it thinks the remove actually happens in front, not behind, of the actual current index.
If the removed item was visible (either on screen or due to cacheBuffers), it works fine.
Attachments
For Gerrit Dashboard: QTBUG-92809 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
377852,5 | Reset currentChanges if currentChanges is active when refilling listView | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
380234,2 | Reset currentChanges if currentChanges is active when refilling listView | 6.2 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
380236,5 | Reset currentChanges if currentChanges is active when refilling listView | tqtc/lts-5.15 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |